--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -1,4 +1,4 @@
-$red: #DC262D;
+$red: #dc262d;
 
 .app-logo {
   height: 15vmin;
@@ -17,9 +17,11 @@ $red: #DC262D;
 }
 
 .app-header {
-  height: 100vh;
+  padding-top: 12px;
+  height: calc(100vh - 32px); // 32px = navbar height
+  bottom: 0;
   display: flex;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(8px + 2vmin);
 }
 
 .col {
@@ -35,10 +37,132 @@ $red: #DC262D;
     transform: translateY(0);
   }
   50% {
-    transform: translateY(10px)
+    transform: translateY(10px);
   }
   100% {
-    transform: translateY(0px)
+    transform: translateY(0px);
+  }
+}
+
+// Variables
+$window-close: #f77669;
+$window-minify: #ffcb6b;
+$window-expand: #c3e88d;
+
+$text-header: black;
+$background-header: #e3e3e3;
+$background-code: white;
+// $text-header: #eee;
+// $background-header: #393d3e;
+// $background-code: #1f1e1e;
+
+.cv-code {
+  font-size: 18px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.16);
+  content-visibility: auto;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  background: $background-code;
+  width: calc(100% - 24px); // 24/2 = 12px margin beide Seiten
+  height: calc(100% - 12px); // 12px margin unten
+  // max-width: 100%;
+  margin: 0 auto;
+  &-header {
+    display: flex;
+    align-items: center;
+    background: $background-header;
+    color: $text-header;
+    text-align: center;
+    padding: 5px 10px;
+    border-radius: 0.5rem 0.5rem 0 0;
+    position: relative;
+    font-family: "JetBrains Mono", monospace;
+  }
+  &-buttons {
+    margin-right: 1rem;
+    display: flex;
+    gap: 6px;
+    .fake-button[data-close] {
+      width: 0.7rem;
+      height: 0.7rem;
+      border-radius: 50%;
+      background: $window-close;
+    }
+    .fake-button[data-minify] {
+      width: 0.7rem;
+      height: 0.7rem;
+      border-radius: 50%;
+      background: $window-minify;
+    }
+    .fake-button[data-expand] {
+      width: 0.7rem;
+      height: 0.7rem;
+      border-radius: 50%;
+      background: $window-expand;
+    }
+  }
+  &-title {
+    margin: 0 auto;
+    display: block;
+  }
+  .content {
+    position: relative;
+    color: white;
+    padding: 1rem;
+
+    overflow-y: scroll;
+    overscroll-behavior-y: contain;
+    scroll-snap-type: y proximity;
+
+    height: calc(100% - 38px);
+    font-family: "Encode Sans Expanded", sans-serif;
+    font-size: 0.8rem;
+    .instruction {
+      display: block;
+      padding: 0 0 7px 0;
+    }
+    .user {
+      color: #6db928;
+    }
+    .path,
+    .command {
+      color: #6fa5cd;
+    }
+  }
+  .content > div:last-child {
+    scroll-snap-align: end;
+  }
+
+  .clear-button {
+  }
+
+  .scrollbar::-webkit-scrollbar {
+    background-color: #fff;
+    width: 16px;
+  }
+
+  /* background of the scrollbar except button or resizer */
+  .scrollbar::-webkit-scrollbar-track {
+    background-color: #fff;
+  }
+  .scrollbar::-webkit-scrollbar-track:hover {
+    background-color: #f4f4f4;
+  }
+
+  /* scrollbar itself */
+  .scrollbar::-webkit-scrollbar-thumb {
+    background-color: #babac0;
+    border-radius: 16px;
+    border: 5px solid #fff;
+  }
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #a0a0a5;
+    border: 4px solid #f4f4f4;
+  }
+
+  /* set button(top and bottom of the scrollbar) */
+  .scrollbar::-webkit-scrollbar-button {
+    display: none;
   }
 }
 
@@ -54,7 +178,6 @@ $red: #DC262D;
   .toggleSection {
     padding: 0 1rem 1rem;
   }
-
 }
 
 .sectionTitle {
@@ -65,8 +188,7 @@ $red: #DC262D;
 
 hr {
   border-top: 1px solid rgba(128, 128, 128, 0.555);
-  margin: 1.5rem auto 0.2rem auto; 
-  
+  margin: 1.5rem auto 0.2rem auto;
 }
 
 /*
@@ -75,7 +197,7 @@ hr {
 $circ: 1.5rem;
 $switch-height: 1.3rem;
 
-.hide{
+.hide {
   display: none;
 }
 
@@ -112,16 +234,12 @@ $switch-height: 1.3rem;
     background: #fff;
     border-radius: 50%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    transition:
-      background 0.4s,
-      left 0.4s,
-      height 0.2s,
-      width 0.2s;
+    transition: background 0.4s, left 0.4s, height 0.2s, width 0.2s;
   }
 }
 
 input:checked + label {
-  box-shadow: inset 0 0 0 $switch-height tint( $red, 50% );
+  box-shadow: inset 0 0 0 $switch-height tint($red, 50%);
   background: lighten($red, 40%);
 }
 
