zwischenstand champdetection loading spinner
Co-authored-by: Felix Keller <felixkeller98@users.noreply.github.com>

--- a/src/components/terminal/Terminal.module.scss
+++ b/src/components/terminal/Terminal.module.scss
@@ -107,4 +107,10 @@ $window-expand: #c3e88d;
   .scrollbar::-webkit-scrollbar-button {
     display: none;
   }
+
+  .terminalMessage {
+    div {
+      display: inline-block !important;
+    }
+  }
 }
