new loading spinner

--- a/src/components/terminal/Terminal.module.scss
+++ b/src/components/terminal/Terminal.module.scss
@@ -112,5 +112,10 @@ $window-expand: #c3e88d;
     div {
       display: inline-block !important;
     }
+
+    .loadingSpinner {
+      margin-right: 7px;
+      margin-left: 2px;
+    }
   }
 }
